se aplico estilos finalizando la actividad 1. se agregaron pseudo-elementos ::before y ::after para lograr un subrayado animado en el saludo inicial y en los items del nav, tambien box-shadow para dar efectos de sombras junto a un :hover para simular presion sobre items. Tambien un fondo de pantalla ajustado con opcion de scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 
 body{
-          background-image: url("../src/assets/home-option-2.jpg");
+          background-image: url("../src/assets/home-option-4.jpg");
           background-size: cover; 
           background-position: initial; 
           background-repeat: no-repeat; 
-          background-attachment: scroll; }
+          background-attachment: scroll;
+}
 
 
