--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
+	color: black;
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
