--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,6 @@ body {
   background-image: url("../src/assets/home-option-4.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
+  backdrop-filter: blur(2px);
 }
